docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
/* ... */
.sidebar-last #block-views-tag_cloud-block_1.block .inner, .sidebar-first #block-views-tag_cloud-block_1.block .inner {
  background: #fff url(../images/bg-box-grey.png) 0px 0px no-repeat;
}

#block-views-homepage_group_showcase-block_1 h2 {
  background: url(../images/icn-community-small.png) left top no-repeat;
  padding: 0 0 5px 34px;
  height: 27px;
  line-height: 27px;
}

#block-views-a3e7b5edbe74088872090245cc4288ec h2 {
  background: url(../images/icn-featured-small.png) left top no-repeat;
  padding: 0 0 5px 34px;
  height: 27px;
  line-height: 27px;
  margin-bottom: 5px;
}

#block-views-recent_notices-block_1 h2 {
  background: url(../images/icn-notices-small.png) left top no-repeat;
  padding: 0 0 5px 31px;
  height: 23px;
  line-height: 23px;
}

#block-views-groups_most_active-block_1 h2 {
  background: url(../images/icn-groups-small.png) left top no-repeat;
  padding: 0 0 5px 32px;
  height: 25px;
  line-height: 25px;
}

#block-views-tag_cloud-block_1 h2 {
  background: url(../images/icn-tags-small.png) left top no-repeat;
  padding: 0 0 5px 33px;
  height: 25px;
  line-height: 25px;
}

.sidebar-first .block .content, .sidebar-last .block .content {
  padding: 0;
}

.front .views-field-field-group-image-fid {
  float: left;
  width: 152px;
  margin-top: 5px;
  margin-right: 10px;
}

.front div.views-field-title {
  font-weight: bold;
}

/*cols-1 table on home page for groups */
.front .views-table {
  /*float: right;*/
  width: 442px;
  overflow: hidden;
}

.view-dashboard-recent-content .views-field-picture {
  float: left;
  min-height: 37px;
  #height: 37px;
  margin: 0 10px 0 0;
}

html.js fieldset.collapsible .fieldset-wrapper {
  overflow: hidden !important;
}

.views-exposed-form .views-exposed-widget .form-submit {
  margin: 0px;
}

html.js fieldset.collapsed {
  margin-bottom: 0px;
}

#views-bulk-operations-submit {
  padding: 0;
}

/*------------------------------------------
 icons
 --------------------------------------------*/
.view-homepage-group-showcase table tr td.views-field-type span.blog, .view-recent-featured table tr td.views-field-type span.blog, .view-og-content-tracker table tr td.views-field-type span.blog, .view-recent-content-all table tr td.views-field-type span.blog, .view-og-my-content table tr td.views-field-type span.blog {
  background: transparent url(../../commons_origins/images/icons/blog-node.png) no-repeat center center;
  display: block;
  width: 40px;
  text-indent: -10000px !important;
}

.view-homepage-group-showcase table tr td.views-field-type span.event, .view-recent-featured table tr td.views-field-type span.event, .view-recent-content-all table tr td.views-field-type span.event, .view-og-content-tracker table tr td.views-field-type span.event, .view-og-my-content table tr td.views-field-type span.event {
  background: transparent url(../../commons_origins/images/icons/event-node.png) no-repeat center center;
  display: block;
  width: 40px;
  text-indent: -10000px !important;
}

.view-homepage-group-showcase table tr td.views-field-type span.wiki, .view-recent-featured table tr td.views-field-type span.wiki, .view-recent-content-all table tr td.views-field-type span.wiki, .view-og-content-tracker table tr td.views-field-type span.wiki, .view-og-my-content table tr td.views-field-type span.wiki {
  background: transparent url(../../commons_origins/images/icons/wiki-node.png) no-repeat center center;
  display: block;
  width: 40px;
  text-indent: -10000px !important;
}

.view-homepage-group-showcase table tr td.views-field-type span.document, .view-recent-featured table tr td.views-field-type span.document, .view-recent-content-all table tr td.views-field-type span.document, .view-og-content-tracker table tr td.views-field-type span.document, .view-og-my-content table tr td.views-field-type span.document {
  background: transparent url(../../commons_origins/images/icons/document-node.png) no-repeat center center;
  display: block;
  width: 40px;
  text-indent: -10000px !important;
}

.view-homepage-group-showcase table tr td.views-field-type span.discussion, .view-recent-featured table tr td.views-field-type span.discussion, .view-recent-content-all table tr td.views-field-type span.discussion, .view-og-content-tracker table tr td.views-field-type span.discussion, .view-og-my-content table tr td.views-field-type span.discussion {
  background: transparent url(../../commons_origins/images/icons/forum-node.png) no-repeat center center;
  display: block;
  width: 40px;
  text-indent: -10000px !important;
}

.view-homepage-group-showcase table tr td.views-field-type span.poll, .view-recent-featured table tr td.views-field-type span.poll, .view-recent-content-all table tr td.views-field-type span.poll, .view-og-content-tracker table tr td.views-field-type span.poll, .view-og-my-content table tr td.views-field-type span.poll {
  background: transparent url(../../commons_origins/images/icons/poll-node.png) no-repeat center center;
  display: block;
  width: 40px;
  text-indent: -10000px !important;
}

.view-homepage-group-showcase table tr td.views-field-type span.group, .view-recent-featured table tr td.views-field-type span.group, .view-recent-content-all table tr td.views-field-type span.group, .view-og-content-tracker table tr td.views-field-type span.group, .view-og-my-content table tr td.views-field-type span.group {
  background: transparent url(../../commons_origins/images/icons/group-node.png) no-repeat center center;
  display: block;
  width: 40px;
  text-indent: -10000px !important;
}
/* ... */

